compiler/parser.output
   0  $accept : %entry% $end

   1  program : begin_stmt pattern_action_list end_stmt EOF

   2  begin_stmt : BEGIN LBRACE stmt_list RBRACE

   3  end_stmt : END LBRACE stmt_list RBRACE

   4  pattern_action_list :
   5                      | pattern_action pattern_action_list

   6  pattern_action : pattern LBRACE stmt_list RBRACE

   7  stmt_list :
   8            | stmt stmt_list

   9  stmt : expr_no_brace SEMI
  10       | RETURN expr SEMI
  11       | LBRACE stmt_list RBRACE
  12       | IF LPAREN expr RPAREN stmt
  13       | IF LPAREN expr RPAREN stmt ELSE stmt
  14       | WHILE LPAREN expr RPAREN stmt
  15       | FOR LPAREN ID IN ID RPAREN stmt
  16       | FUN func_decl
  17       | SEMI

  18  expr : table_literal
  19       | expr_no_brace

  20  expr_no_brace : ID
  21                | literal
  22                | expr_no_brace TIMES expr_no_brace
  23                | expr_no_brace DIVIDES expr_no_brace
  24                | expr_no_brace MOD expr_no_brace
  25                | expr_no_brace MINUS expr_no_brace
  26                | expr_no_brace PLUS expr_no_brace
  27                | expr_no_brace EQ expr_no_brace
  28                | expr_no_brace LT expr_no_brace
  29                | expr_no_brace GT expr_no_brace
  30                | expr_no_brace LEQ expr_no_brace
  31                | expr_no_brace GEQ expr_no_brace
  32                | expr_no_brace NEQ expr_no_brace
  33                | expr_no_brace AND expr_no_brace
  34                | expr_no_brace OR expr_no_brace
  35                | ID ASSIGN expr
  36                | ID LPAREN expr_list RPAREN
  37                | ID LPAREN RPAREN
  38                | ID bracket_expr_list
  39                | ID bracket_expr_list ASSIGN expr
  40                | LPAREN expr RPAREN
  41                | MINUS expr_no_brace

  42  expr_list : expr
  43            | expr COMMA expr_list

  44  bracket_expr_list : LBRACK expr RBRACK
  45                    | LBRACK expr RBRACK bracket_expr_list

  46  literal : INT
  47          | STRING
  48          | DOUBLE
  49          | THIS

  50  table_literal : array_literal
  51                | keyvalue_literal

  52  array_literal : LBRACE RBRACE
  53                | LBRACE expr_list RBRACE

  54  keyvalue_literal : LBRACE keyvalue_list RBRACE

  55  keyvalue_list : keyvalue
  56                | keyvalue_list COMMA keyvalue

  57  keyvalue : key COLON expr

  58  key : INT
  59      | STRING

  60  func_decl : ID LPAREN params_list RPAREN LBRACE stmt_list RBRACE

  61  params_list :
  62              | ID
  63              | ID COMMA params_list

  64  pattern : LBRACK_AMP css_selector AMP_RBRACK
  65          | LBRACK_FSLASH regex_sequence FSLASH_RBRACK

  66  regex : REGEX_STRING
  67        | PERIOD
  68        | LPAREN regex_sequence RPAREN
  69        | LBRACK regex_set_sequence RBRACK
  70        | regex QUEST
  71        | regex PLUS
  72        | regex TIMES
  73        | regex VERT regex

  74  regex_sequence : regex
  75                 | regex regex_sequence

  76  regex_set : REGEX_STRING
  77            | REGEX_STRING MINUS REGEX_STRING
  78            | CARROT regex_set
  79            | LBRACK regex_set_sequence RBRACK

  80  regex_set_sequence : regex_set
  81                     | regex_set regex_set_sequence

  82  css_selector : simple_selector_seq
  83               | css_selector PLUS simple_selector_seq
  84               | css_selector GT simple_selector_seq
  85               | css_selector TILDE simple_selector_seq
  86               | css_selector typed_simple_selector_seq

  87  simple_selector_seq : typed_simple_selector_seq
  88                      | property_selector_list

  89  typed_simple_selector_seq : type_selector
  90                            | type_selector property_selector_list

  91  type_selector : TIMES
  92                | ID

  93  property_selector_list : property_selector
  94                         | property_selector property_selector_list

  95  property_selector : PERIOD ID
  96                    | HASH ID
  97                    | LBRACK ID RBRACK
  98                    | LBRACK ID ASSIGN STRING RBRACK
  99                    | LBRACK ID TIMES_EQ STRING RBRACK
 100                    | LBRACK ID XOR_EQ STRING RBRACK
 101                    | LBRACK ID DOLLAR_EQ STRING RBRACK
 102                    | LBRACK ID TILDE_EQ STRING RBRACK

 103  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (103)

	BEGIN  shift 3
	.  error

	program  goto 4
	begin_stmt  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	begin_stmt : BEGIN . LBRACE stmt_list RBRACE  (2)

	LBRACE  shift 6
	.  error


state 4
	%entry% : '\001' program .  (103)

	.  reduce 103


state 5
	program : begin_stmt . pattern_action_list end_stmt EOF  (1)
	pattern_action_list : .  (4)

	LBRACK_AMP  shift 7
	LBRACK_FSLASH  shift 8
	END  reduce 4

	pattern_action_list  goto 9
	pattern_action  goto 10
	pattern  goto 11


state 6
	begin_stmt : BEGIN LBRACE . stmt_list RBRACE  (2)
	stmt_list : .  (7)

	LPAREN  shift 12
	LBRACE  shift 13
	MINUS  shift 14
	FUN  shift 15
	SEMI  shift 16
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	IF  shift 21
	RETURN  shift 22
	THIS  shift 23
	WHILE  shift 24
	FOR  shift 25
	RBRACE  reduce 7

	stmt_list  goto 26
	stmt  goto 27
	expr_no_brace  goto 28
	literal  goto 29


state 7
	pattern : LBRACK_AMP . css_selector AMP_RBRACK  (64)

	LBRACK  shift 30
	TIMES  shift 31
	PERIOD  shift 32
	HASH  shift 33
	ID  shift 34
	.  error

	css_selector  goto 35
	simple_selector_seq  goto 36
	typed_simple_selector_seq  goto 37
	property_selector_list  goto 38
	type_selector  goto 39
	property_selector  goto 40


state 8
	pattern : LBRACK_FSLASH . regex_sequence FSLASH_RBRACK  (65)

	LPAREN  shift 41
	LBRACK  shift 42
	PERIOD  shift 43
	REGEX_STRING  shift 44
	.  error

	regex_sequence  goto 45
	regex  goto 46


state 9
	program : begin_stmt pattern_action_list . end_stmt EOF  (1)

	END  shift 47
	.  error

	end_stmt  goto 48


state 10
	pattern_action_list : pattern_action . pattern_action_list  (5)
	pattern_action_list : .  (4)

	LBRACK_AMP  shift 7
	LBRACK_FSLASH  shift 8
	END  reduce 4

	pattern_action_list  goto 49
	pattern_action  goto 10
	pattern  goto 11


state 11
	pattern_action : pattern . LBRACE stmt_list RBRACE  (6)

	LBRACE  shift 50
	.  error


state 12
	expr_no_brace : LPAREN . expr RPAREN  (40)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 53
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 13
	stmt : LBRACE . stmt_list RBRACE  (11)
	stmt_list : .  (7)

	LPAREN  shift 12
	LBRACE  shift 13
	MINUS  shift 14
	FUN  shift 15
	SEMI  shift 16
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	IF  shift 21
	RETURN  shift 22
	THIS  shift 23
	WHILE  shift 24
	FOR  shift 25
	RBRACE  reduce 7

	stmt_list  goto 57
	stmt  goto 27
	expr_no_brace  goto 28
	literal  goto 29


state 14
	expr_no_brace : MINUS . expr_no_brace  (41)

	LPAREN  shift 12
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 58
	literal  goto 29


state 15
	stmt : FUN . func_decl  (16)

	ID  shift 59
	.  error

	func_decl  goto 60


state 16
	stmt : SEMI .  (17)

	.  reduce 17


state 17
	literal : STRING .  (47)

	.  reduce 47


state 18
	literal : INT .  (46)

	.  reduce 46


state 19
	literal : DOUBLE .  (48)

	.  reduce 48


state 20
	expr_no_brace : ID .  (20)
	expr_no_brace : ID . ASSIGN expr  (35)
	expr_no_brace : ID . LPAREN expr_list RPAREN  (36)
	expr_no_brace : ID . LPAREN RPAREN  (37)
	expr_no_brace : ID . bracket_expr_list  (38)
	expr_no_brace : ID . bracket_expr_list ASSIGN expr  (39)

	LPAREN  shift 61
	LBRACK  shift 62
	ASSIGN  shift 63
	RPAREN  reduce 20
	RBRACK  reduce 20
	RBRACE  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	TIMES  reduce 20
	DIVIDES  reduce 20
	MOD  reduce 20
	LT  reduce 20
	GT  reduce 20
	LEQ  reduce 20
	GEQ  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	AND  reduce 20
	OR  reduce 20
	COMMA  reduce 20
	SEMI  reduce 20

	bracket_expr_list  goto 64


state 21
	stmt : IF . LPAREN expr RPAREN stmt  (12)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (13)

	LPAREN  shift 65
	.  error


state 22
	stmt : RETURN . expr SEMI  (10)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 66
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 23
	literal : THIS .  (49)

	.  reduce 49


state 24
	stmt : WHILE . LPAREN expr RPAREN stmt  (14)

	LPAREN  shift 67
	.  error


state 25
	stmt : FOR . LPAREN ID IN ID RPAREN stmt  (15)

	LPAREN  shift 68
	.  error


state 26
	begin_stmt : BEGIN LBRACE stmt_list . RBRACE  (2)

	RBRACE  shift 69
	.  error


state 27
	stmt_list : stmt . stmt_list  (8)
	stmt_list : .  (7)

	LPAREN  shift 12
	LBRACE  shift 13
	MINUS  shift 14
	FUN  shift 15
	SEMI  shift 16
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	IF  shift 21
	RETURN  shift 22
	THIS  shift 23
	WHILE  shift 24
	FOR  shift 25
	RBRACE  reduce 7

	stmt_list  goto 70
	stmt  goto 27
	expr_no_brace  goto 28
	literal  goto 29


state 28
	stmt : expr_no_brace . SEMI  (9)
	expr_no_brace : expr_no_brace . TIMES expr_no_brace  (22)
	expr_no_brace : expr_no_brace . DIVIDES expr_no_brace  (23)
	expr_no_brace : expr_no_brace . MOD expr_no_brace  (24)
	expr_no_brace : expr_no_brace . MINUS expr_no_brace  (25)
	expr_no_brace : expr_no_brace . PLUS expr_no_brace  (26)
	expr_no_brace : expr_no_brace . EQ expr_no_brace  (27)
	expr_no_brace : expr_no_brace . LT expr_no_brace  (28)
	expr_no_brace : expr_no_brace . GT expr_no_brace  (29)
	expr_no_brace : expr_no_brace . LEQ expr_no_brace  (30)
	expr_no_brace : expr_no_brace . GEQ expr_no_brace  (31)
	expr_no_brace : expr_no_brace . NEQ expr_no_brace  (32)
	expr_no_brace : expr_no_brace . AND expr_no_brace  (33)
	expr_no_brace : expr_no_brace . OR expr_no_brace  (34)

	PLUS  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDES  shift 74
	MOD  shift 75
	LT  shift 76
	GT  shift 77
	LEQ  shift 78
	GEQ  shift 79
	EQ  shift 80
	NEQ  shift 81
	AND  shift 82
	OR  shift 83
	SEMI  shift 84
	.  error


state 29
	expr_no_brace : literal .  (21)

	.  reduce 21


state 30
	property_selector : LBRACK . ID RBRACK  (97)
	property_selector : LBRACK . ID ASSIGN STRING RBRACK  (98)
	property_selector : LBRACK . ID TIMES_EQ STRING RBRACK  (99)
	property_selector : LBRACK . ID XOR_EQ STRING RBRACK  (100)
	property_selector : LBRACK . ID DOLLAR_EQ STRING RBRACK  (101)
	property_selector : LBRACK . ID TILDE_EQ STRING RBRACK  (102)

	ID  shift 85
	.  error


state 31
	type_selector : TIMES .  (91)

	.  reduce 91


state 32
	property_selector : PERIOD . ID  (95)

	ID  shift 86
	.  error


state 33
	property_selector : HASH . ID  (96)

	ID  shift 87
	.  error


state 34
	type_selector : ID .  (92)

	.  reduce 92


state 35
	pattern : LBRACK_AMP css_selector . AMP_RBRACK  (64)
	css_selector : css_selector . PLUS simple_selector_seq  (83)
	css_selector : css_selector . GT simple_selector_seq  (84)
	css_selector : css_selector . TILDE simple_selector_seq  (85)
	css_selector : css_selector . typed_simple_selector_seq  (86)

	PLUS  shift 88
	TIMES  shift 31
	GT  shift 89
	TILDE  shift 90
	AMP_RBRACK  shift 91
	ID  shift 34
	.  error

	typed_simple_selector_seq  goto 92
	type_selector  goto 39


state 36
	css_selector : simple_selector_seq .  (82)

	.  reduce 82


state 37
	simple_selector_seq : typed_simple_selector_seq .  (87)

	.  reduce 87


state 38
	simple_selector_seq : property_selector_list .  (88)

	.  reduce 88


state 39
	typed_simple_selector_seq : type_selector .  (89)
	typed_simple_selector_seq : type_selector . property_selector_list  (90)

	LBRACK  shift 30
	PERIOD  shift 32
	HASH  shift 33
	PLUS  reduce 89
	TIMES  reduce 89
	GT  reduce 89
	TILDE  reduce 89
	AMP_RBRACK  reduce 89
	ID  reduce 89

	property_selector_list  goto 93
	property_selector  goto 40


state 40
	property_selector_list : property_selector .  (93)
	property_selector_list : property_selector . property_selector_list  (94)

	LBRACK  shift 30
	PERIOD  shift 32
	HASH  shift 33
	PLUS  reduce 93
	TIMES  reduce 93
	GT  reduce 93
	TILDE  reduce 93
	AMP_RBRACK  reduce 93
	ID  reduce 93

	property_selector_list  goto 94
	property_selector  goto 40


state 41
	regex : LPAREN . regex_sequence RPAREN  (68)

	LPAREN  shift 41
	LBRACK  shift 42
	PERIOD  shift 43
	REGEX_STRING  shift 44
	.  error

	regex_sequence  goto 95
	regex  goto 46


state 42
	regex : LBRACK . regex_set_sequence RBRACK  (69)

	LBRACK  shift 96
	CARROT  shift 97
	REGEX_STRING  shift 98
	.  error

	regex_set_sequence  goto 99
	regex_set  goto 100


state 43
	regex : PERIOD .  (67)

	.  reduce 67


state 44
	regex : REGEX_STRING .  (66)

	.  reduce 66


state 45
	pattern : LBRACK_FSLASH regex_sequence . FSLASH_RBRACK  (65)

	FSLASH_RBRACK  shift 101
	.  error


state 46
	regex : regex . QUEST  (70)
	regex : regex . PLUS  (71)
	regex : regex . TIMES  (72)
	regex : regex . VERT regex  (73)
	regex_sequence : regex .  (74)
	regex_sequence : regex . regex_sequence  (75)

	LPAREN  shift 41
	LBRACK  shift 42
	PLUS  shift 102
	TIMES  shift 103
	PERIOD  shift 43
	QUEST  shift 104
	VERT  shift 105
	REGEX_STRING  shift 44
	RPAREN  reduce 74
	FSLASH_RBRACK  reduce 74

	regex_sequence  goto 106
	regex  goto 46


state 47
	end_stmt : END . LBRACE stmt_list RBRACE  (3)

	LBRACE  shift 107
	.  error


state 48
	program : begin_stmt pattern_action_list end_stmt . EOF  (1)

	EOF  shift 108
	.  error


state 49
	pattern_action_list : pattern_action pattern_action_list .  (5)

	.  reduce 5


state 50
	pattern_action : pattern LBRACE . stmt_list RBRACE  (6)
	stmt_list : .  (7)

	LPAREN  shift 12
	LBRACE  shift 13
	MINUS  shift 14
	FUN  shift 15
	SEMI  shift 16
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	IF  shift 21
	RETURN  shift 22
	THIS  shift 23
	WHILE  shift 24
	FOR  shift 25
	RBRACE  reduce 7

	stmt_list  goto 109
	stmt  goto 27
	expr_no_brace  goto 28
	literal  goto 29


state 51
	array_literal : LBRACE . RBRACE  (52)
	array_literal : LBRACE . expr_list RBRACE  (53)
	keyvalue_literal : LBRACE . keyvalue_list RBRACE  (54)

	LPAREN  shift 12
	LBRACE  shift 51
	RBRACE  shift 110
	MINUS  shift 14
	STRING  shift 111
	INT  shift 112
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 113
	table_literal  goto 54
	literal  goto 29
	expr_list  goto 114
	array_literal  goto 55
	keyvalue_literal  goto 56
	keyvalue_list  goto 115
	keyvalue  goto 116
	key  goto 117


state 52
	expr : expr_no_brace .  (19)
	expr_no_brace : expr_no_brace . TIMES expr_no_brace  (22)
	expr_no_brace : expr_no_brace . DIVIDES expr_no_brace  (23)
	expr_no_brace : expr_no_brace . MOD expr_no_brace  (24)
	expr_no_brace : expr_no_brace . MINUS expr_no_brace  (25)
	expr_no_brace : expr_no_brace . PLUS expr_no_brace  (26)
	expr_no_brace : expr_no_brace . EQ expr_no_brace  (27)
	expr_no_brace : expr_no_brace . LT expr_no_brace  (28)
	expr_no_brace : expr_no_brace . GT expr_no_brace  (29)
	expr_no_brace : expr_no_brace . LEQ expr_no_brace  (30)
	expr_no_brace : expr_no_brace . GEQ expr_no_brace  (31)
	expr_no_brace : expr_no_brace . NEQ expr_no_brace  (32)
	expr_no_brace : expr_no_brace . AND expr_no_brace  (33)
	expr_no_brace : expr_no_brace . OR expr_no_brace  (34)

	PLUS  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDES  shift 74
	MOD  shift 75
	LT  shift 76
	GT  shift 77
	LEQ  shift 78
	GEQ  shift 79
	EQ  shift 80
	NEQ  shift 81
	AND  shift 82
	OR  shift 83
	RPAREN  reduce 19
	RBRACK  reduce 19
	RBRACE  reduce 19
	COMMA  reduce 19
	SEMI  reduce 19


state 53
	expr_no_brace : LPAREN expr . RPAREN  (40)

	RPAREN  shift 118
	.  error


state 54
	expr : table_literal .  (18)

	.  reduce 18


state 55
	table_literal : array_literal .  (50)

	.  reduce 50


state 56
	table_literal : keyvalue_literal .  (51)

	.  reduce 51


state 57
	stmt : LBRACE stmt_list . RBRACE  (11)

	RBRACE  shift 119
	.  error


state 58
	expr_no_brace : expr_no_brace . TIMES expr_no_brace  (22)
	expr_no_brace : expr_no_brace . DIVIDES expr_no_brace  (23)
	expr_no_brace : expr_no_brace . MOD expr_no_brace  (24)
	expr_no_brace : expr_no_brace . MINUS expr_no_brace  (25)
	expr_no_brace : expr_no_brace . PLUS expr_no_brace  (26)
	expr_no_brace : expr_no_brace . EQ expr_no_brace  (27)
	expr_no_brace : expr_no_brace . LT expr_no_brace  (28)
	expr_no_brace : expr_no_brace . GT expr_no_brace  (29)
	expr_no_brace : expr_no_brace . LEQ expr_no_brace  (30)
	expr_no_brace : expr_no_brace . GEQ expr_no_brace  (31)
	expr_no_brace : expr_no_brace . NEQ expr_no_brace  (32)
	expr_no_brace : expr_no_brace . AND expr_no_brace  (33)
	expr_no_brace : expr_no_brace . OR expr_no_brace  (34)
	expr_no_brace : MINUS expr_no_brace .  (41)

	.  reduce 41


state 59
	func_decl : ID . LPAREN params_list RPAREN LBRACE stmt_list RBRACE  (60)

	LPAREN  shift 120
	.  error


state 60
	stmt : FUN func_decl .  (16)

	.  reduce 16


state 61
	expr_no_brace : ID LPAREN . expr_list RPAREN  (36)
	expr_no_brace : ID LPAREN . RPAREN  (37)

	LPAREN  shift 12
	RPAREN  shift 121
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 113
	table_literal  goto 54
	literal  goto 29
	expr_list  goto 122
	array_literal  goto 55
	keyvalue_literal  goto 56


state 62
	bracket_expr_list : LBRACK . expr RBRACK  (44)
	bracket_expr_list : LBRACK . expr RBRACK bracket_expr_list  (45)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 123
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 63
	expr_no_brace : ID ASSIGN . expr  (35)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 124
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 64
	expr_no_brace : ID bracket_expr_list .  (38)
	expr_no_brace : ID bracket_expr_list . ASSIGN expr  (39)

	ASSIGN  shift 125
	RPAREN  reduce 38
	RBRACK  reduce 38
	RBRACE  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDES  reduce 38
	MOD  reduce 38
	LT  reduce 38
	GT  reduce 38
	LEQ  reduce 38
	GEQ  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	COMMA  reduce 38
	SEMI  reduce 38


state 65
	stmt : IF LPAREN . expr RPAREN stmt  (12)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (13)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 126
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 66
	stmt : RETURN expr . SEMI  (10)

	SEMI  shift 127
	.  error


state 67
	stmt : WHILE LPAREN . expr RPAREN stmt  (14)

	LPAREN  shift 12
	LBRACE  shift 51
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 52
	expr  goto 128
	table_literal  goto 54
	literal  goto 29
	array_literal  goto 55
	keyvalue_literal  goto 56


state 68
	stmt : FOR LPAREN . ID IN ID RPAREN stmt  (15)

	ID  shift 129
	.  error


state 69
	begin_stmt : BEGIN LBRACE stmt_list RBRACE .  (2)

	.  reduce 2


state 70
	stmt_list : stmt stmt_list .  (8)

	.  reduce 8


state 71
	expr_no_brace : expr_no_brace PLUS . expr_no_brace  (26)

	LPAREN  shift 12
	MINUS  shift 14
	STRING  shift 17
	INT  shift 18
	DOUBLE  shift 19
	ID  shift 20
	THIS  shift 23
	.  error

	expr_no_brace  goto 130
	literal  goto 29

